syntax = "proto3";

package qan.v1beta1;

// This option is used to set the default error response for all Swagger APIs generated from this file.
// See also header.json.
// It has to be copy&pasted into each file.
option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  responses: {
    key: "default"
    value: {
      description: "An error response."
      schema: {
        json_schema: {
          ref: "#/definitions/qanpbErrorResponse"
        }
      }
    }
  }
};
option go_package = "qanpb";

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

// MetricsNames serves list of names of metrics.
service MetricsNames {
  // GetMetricsNames gets map of metrics names.
  rpc GetMetricsNames(MetricsNamesRequest) returns (MetricsNamesReply) {
    option (google.api.http) = {
      post: "/v0/qan/GetMetricsNames"
      body: "*"
    };
  }
}

// MetricsNamesRequest is emty.
message MetricsNamesRequest {}

// MetricsNamesReply is map of stored metrics:
// key is root of metric name in db (Ex:. [m_]query_time[_sum]);
// value - Human readable name of metrics.
message MetricsNamesReply {
  map<string, string> data = 1;
}
